| Bug #5155 | Views: COLLATE clause conflicts cause crashes | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 1:32 | Modified: | 6 Sep 2004 13:45 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 1:32]
Peter Gulutzan
[27 Aug 2004 8:14]
Alexander Barkov
It does not look like a character set related problem. Looking into v2.frm I found this: query=select (`test`.`t2`.`col1` collate _latin1'latin1_german1_ci') AS `col1 co llate latin1_german1_ci` from `test`.`t2` Which is wrong. The correct query is: query=select (`test`.`t2`.`col1` collate latin1_german1_ci) AS `col1 co llate latin1_german1_ci` from `test`.`t2` Note, there should not be quotes around latin1_german1_ci, and there should not be character set introduces before it. I'm reassigning this bug to Sanja.
[31 Aug 2004 9:11]
Oleksandr Byelkin
ChangeSet 1.1739 04/08/31 10:06:38 bell@sanja.is.com.ua +18 -0 fixed open_and_lock_tables result processing (all open_and_lock_tables revision) fixed printing of COLLATE operation (BUG#5155)
[6 Sep 2004 13:45]
Oleksandr Byelkin
Thank You for bugreport! Bug is fixed and patch is pushed into our internal source repository.
