fixed open_and_lock_tables result processing (all open_and_lock_tables revision) fixed printing of COLLATE operation (BUG#5155)

mysql-test/r/case.result:
  fixed printing of COLLATE operation
mysql-test/r/func_if.result:
  fixed printing of COLLATE operation
mysql-test/r/func_in.result:
  fixed printing of COLLATE operation
mysql-test/r/func_str.result:
  fixed printing of COLLATE operation
mysql-test/r/func_test.result:
  fixed printing of COLLATE operation
mysql-test/r/view.result:
  VIEW with collation
mysql-test/t/view.test:
  VIEW with collation
sql/item_strfunc.cc:
  fixed printing of COLLATE operation
sql/item_strfunc.h:
  fixed printing of COLLATE operation
sql/sp_head.cc:
  fixed open_and_lock_tables result processing
sql/sql_base.cc:
  fixed open_and_lock_tables result processing
sql/sql_delete.cc:
  fixed open_and_lock_tables result processing
sql/sql_help.cc:
  fixed open_and_lock_tables result processing
sql/sql_load.cc:
  fixed open_and_lock_tables result processing
sql/sql_parse.cc:
  fixed open_and_lock_tables result processing
sql/sql_prepare.cc:
  fixed open_and_lock_tables result processing
sql/sql_show.cc:
  fixed open_and_lock_tables result processing
sql/sql_update.cc:
  fixed open_and_lock_tables result processing